<resources>
    <string name="app_name">SAV</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    <!--  mine  -->
    <string name="image_news">image news</string>
    <string name="title">Judul berita paling hits</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="error_msg">Error</string>
    <string name="headlines_news">Berita COVID19 Populer</string>
    <string name="latest_news">Berita Vaksin</string>
    <string name="publishDate">Tanggal publis</string>
    <string name="content">Content</string>
    <string name="source">Source</string>
    <string name="open_in_browser">Buka di browser</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_sentiment_analysis">Sentiment A.</string>
    <string name="title_news">News</string>
    <string name="title_vaccination">Vaccination</string>
    <string name="title_team">About Us</string>
    <string name="headlines_news_see_all">Lebih banyak</string>
    <string name="world_conditions">Dunia</string>
    <string name="share_world_condition">Share World Condition</string>
    <string name="number_of_case">Kasus COVID-19 terkonfirmasi</string>
    <string name="number_of_cure">Number of Cure</string>
    <string name="number_of_death">Number of Death</string>
    <string name="positive">Positif</string>
    <string name="recovered">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="local_conditions">Indonesia</string>
    <string name="protokol_kesehatan">Protokol Kesehatan</string>
    <string name="developer_name">Developer\'s Full Name</string>
    <string name="percent_sentiment_example">72,22%</string>
    <string name="positive_sentiment">Pro</string>
    <string name="neutral_sentiment">Netral</string>
    <string name="negative_sentiment">Kontra</string>
    <string name="sentiment_text1">Seberapa banyak</string>
    <string name="sentiment_text2">masyarakat</string>
    <string name="sentiment_text3">Percaya Vaksin</string>
    <string name="sentiment_text4">!??</string>
    <string name="apa_kata_mereka">Apa Kata Mereka?</string>
    <string name="name_user_twitter">Nama Pengguna</string>
    <string name="username_twitter">\@username</string>
    <string name="dot">-</string>
    <string name="long_date_example">11 Januari Bertemu</string>
    <string name="tweet_post">Ini adalah isi dari post tweet pengguna isinya biasanya informatif tapi banyak ga jelasnya sih padahal.</string>
    <string name="satu">1</string>
    <string name="application_name">Application Name</string>
    <string name="about_apps">Mengapa kami hadir?</string>
    <string name="developers">Developers</string>
    <string name="icon_reply">icon reply</string>
    <string name="icon_retweet">icon retweet</string>
    <string name="icon_favorite">icon favorite</string>
    <string name="icon_share">icon share</string>
    <string name="vaccine_target_title">Sasaran Vaksinasi</string>
    <string name="total_vaccination_target">Total sasaran vaksinasi</string>
    <string name="vaccination_1">Vaksinasi 1</string>
    <string name="vaccination_2">Vaksinasi 2</string>
    <string name="total_vaccination_1">Total Vaksin 1</string>
    <string name="total_vaccination_2">Total Vaksin 2</string>
    <string name="vaccinated_1">Sudah Vaksin 1</string>
    <string name="vaccinated_2">Sudah Vaksin 2</string>
    <string name="delayed_vaccine_1">Tertunda Vaksin 1</string>
    <string name="delayed_vaccine_2">Tertunda Vaksin 2</string>
    <string name="vaccine_step_title">Tahapan Vaksinasi</string>
    <string name="health_human_resources">SDM Kesehatan</string>
    <string name="public_officers">Petugas Publik</string>
    <string name="the_elderly">Lansia</string>
    <string name="vaccine_coverage">Cakupan Vaksinasi</string>
    <string name="health_human_resources_vaccinated_1">SDM Kesehatan Vaksinasi 1</string>
    <string name="health_human_resources_vaccinated_2">SDM Kesehatan Vaksinasi 2</string>
    <string name="public_officers_resources_vaccinated_1">Petugas Publik Vaksinasi 1</string>
    <string name="public_officers_resources_vaccinated_2">Petugas Publik Vaksinasi 2</string>
    <string name="the_elderly_resources_vaccinated_1">Lansia Vaksinasi 1</string>
    <string name="the_elderly_resources_vaccinated_2">Lansia Vaksinasi 2</string>
    <string name="sentiment_analysis_of_vaccination">Sentiment Analysis of Vaccination</string>
    <string name="share">Bagikan</string>
    <string name="refresh">Refresh</string>
    <string name="sentiment_res">Pro</string>
    <string name="positive_title">Positif</string>
    <string name="positive_num">1,000,000</string>
    <string name="recovered_title">Sembuh</string>
    <string name="death_title">Meninggal</string>
    <string name="death_num">45,000</string>
    <string name="recovered_num">450,000</string>
    <string name="about_app">Sekitar 51% masyarakat Indonesia menolak dan bingung dengan vaksinasi COVID-19. Ini Hal ini dikarenakan minimnya pengetahuan masyarakat tentang pentingnya vaksinasi COVID-19. Mereka ingin mengetahui opini masyarakat tentang vaksin COVID-19 di Indonesia dan bagaimana perkembangannya kemajuan vaksinasi. Sekitar 54% responden memilih untuk menggunakan media sosial mengakses informasi tentang vaksinasi COVID-19, dengan media sosial ini a patokan bagi masyarakat Indonesia dalam mengambil keputusan terkait vaksinasi COVID-19. Oleh karena itu, penggunaan media sosial sebagai acuan analisis sentimen dapat menciptakan a platform seluler sebagai solusi untuk masalah terkait.</string>
    <string name="developer_student_id">MD-CC-ML</string>
    <string name="visit_linkedin">Visit LinkedIn</string>
    <string name="swipe_left">Geser ke kiri</string>
    <string name="lets_to_vaccine">Ayo Vaksin</string>
    <string name="skip">Skip</string>
    <string name="sentiment_analysis_for_covid_19_vaccine_tweets">Sentiment Analysis for COVID-19 Vaccine Tweets</string>
    <string name="welcome_text_1">Selamat Datang di Aplikasi Ini, dengan Aplikasi ini Anda Akan Mendapatkan Berbagai Informasi Mengenai Sentiment terhadap Vaksinasi Berdasarkan Tweet di Twitter</string>
    <string name="welcome_text_2">Selain Mengetahui Pendapat Mengenai Vaksin di Twitter, Anda juga Dapat Mengetahui Presentase Pendapat Mengenai Vaksinasi, untuk Pro, Kontra, dan Netral Berdasarkan Jumlah Tweet yang Tersedia Di Aplikasi Ini Saat Anda Membukanya</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="load_more">Load More</string>
</resources>
