<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_sentiment_analysis"
        android:icon="@drawable/ic_tweet"
        android:title="@string/title_sentiment_analysis" />

    <item
        android:id="@+id/navigation_statistic_vaccination"
        android:icon="@drawable/ic_shield"
        android:title="@string/title_vaccination" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_info"
        android:title="@string/title_team" />

</menu>