<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingEnd="20dp"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newsHeadlineItem"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_news"
                style="@style/NewsImage"
                android:contentDescription="@string/image_news"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_title"
            style="@style/SubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_item"
            tools:ignore="MissingConstraints"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_publishedAt"
            style="@style/ContentTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            tools:ignore="RtlCompat"
            tools:text="@string/publishDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>